test/test-files/analyzer/structs/error-referenced-undefined-struct-field/exception.out
Semantic error in : ./test-files/analyzer/structs/error-referenced-undefined-struct-field/source.spice:8:29:
Referenced undefined variable: Variable 'f3' was referenced before declared

8  tf("Field 1: %d", a.f3);
                       ^^